<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ricardovejarano.kaitradeapp.fragments.HistoryFragment"
    tools:layout_editor_absoluteY="81dp">


    <EditText
        android:id="@+id/editTextPair"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/veinticuatrodps"
        android:layout_marginTop="@dimen/veinticuatrodps"
        android:ems="10"
        android:hint="@string/pair"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="@dimen/cerodps"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ochodps"
        android:layout_marginStart="@dimen/ochodps"
        android:layout_marginTop="@dimen/diesyseiddps"
        android:background="@drawable/buttonstylegradient"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPayout" />

    <EditText
        android:id="@+id/editTextInvestment"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/veinticuatrodps"
        android:layout_marginTop="@dimen/veinticuatrodps"
        android:ems="10"
        android:hint="@string/investment_or_lot"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/veinticuatrodps"
        android:layout_marginTop="@dimen/diesyseiddps"
        android:ems="10"
        android:hint="@string/date_format"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPair" />

    <EditText
        android:id="@+id/editTextPayout"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/veinticuatrodps"
        android:layout_marginTop="@dimen/diesyseiddps"
        android:ems="10"
        android:hint="@string/payout"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInvestment" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ochodps"
        android:layout_marginStart="@dimen/ochodps"
        android:layout_marginTop="@dimen/ochodps"
        android:text="@string/your_trading_history"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/cerodps"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/ochodps"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSave" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/pair"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/buttonSave" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/investment"
        app:layout_constraintEnd_toStartOf="@+id/textView17"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/buttonSave" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/payout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSave" />

    <ListView
        android:id="@+id/listViewHistory"
        android:layout_width="@dimen/cerodps"
        android:layout_height="@dimen/trecientosdps"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/ochodps"
        android:paddingBottom="@dimen/quincedps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

</android.support.constraint.ConstraintLayout>
