<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/trecientosveinticincodps">

            <LinearLayout
                android:background="@drawable/gradient"
                android:layout_width="match_parent"
                android:layout_height="@dimen/doscientosdps"
                android:orientation="vertical">

                <ImageView
                    android:layout_marginTop="@dimen/cuarentaycincodps"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="@dimen/ciendps"
                    android:layout_height="@dimen/ciendps"
                    android:src="@drawable/newuser" />

                <TextView
                    android:layout_marginTop="@dimen/diezdps"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/veintiunsp" />
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/trecientoscincuentadps"
                android:layout_height="@dimen/cientoveintedps"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/cientonoventadps">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="@dimen/cerodps"
                        android:layout_weight="1"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/favorite"
                            android:textStyle="bold"
                            android:textSize="@dimen/veintesp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/forex"
                            android:textSize="@dimen/veintesp"
                            android:paddingTop="@dimen/diezdps" />

                    </LinearLayout>

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="@dimen/cerodps"
                        android:layout_weight="1"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/age"
                            android:textStyle="bold"
                            android:textSize="@dimen/veintesp" />

                        <TextView
                            android:id="@+id/edad_usuario"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edad_usuario"
                            android:textSize="20sp"
                            android:paddingTop="10dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="@dimen/cerodps"
                        android:layout_weight="1"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/broker"
                            android:textStyle="bold"
                            android:textSize="@dimen/veintesp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/broker_user"
                            android:textSize="@dimen/veintesp"
                            android:paddingTop="@dimen/diezdps" />

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="@dimen/docientossesentadps"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/veinticincodps">

                <ImageView
                    android:layout_width="@dimen/treintayseiddps"
                    android:layout_height="@dimen/treintayseiddps"
                    android:src="@drawable/ic_email_user" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="@dimen/diezdps"
                    android:text="@string/newuser_gmail_com"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/diezdps"
            android:background="@drawable/buttonstylegradient"
            android:text="@string/edit_profile"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>




