<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="handler"
            type="com.ricardovejarano.kaitradeapp.LoginActivity"
            />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context="com.ricardovejarano.kaitradeapp.LoginActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/img_login_width"
            android:layout_height="@dimen/img_height_login"
            android:layout_marginEnd="@dimen/marginend_img_login"
            android:layout_marginStart="@dimen/marginstart_login_image"
            android:layout_marginTop="@dimen/margintop_img_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logotitulo" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cuarentadps"
            android:layout_marginEnd="@dimen/cuarentadps"
            android:layout_marginStart="@dimen/cuarentadps"
            android:layout_marginTop="@dimen/treintaydosdps"
            android:background="@color/dark_grey"
            android:drawableLeft="@drawable/ic_action_user"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/activity_vertical_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cuarentadps"
            android:layout_below="@+id/editText"
            android:layout_marginEnd="@dimen/cuarentadps"
            android:layout_marginStart="@dimen/cuarentadps"
            android:layout_marginTop="@dimen/diezdps"
            android:background="@color/dark_grey"
            android:drawableLeft="@drawable/ic_action_pass"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/activity_vertical_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <Button
            android:id="@+id/button4"
            style="@android:style/Widget.Holo.Light.Button.Toggle"
            android:layout_width="0dp"
            android:layout_height="@dimen/cuarentadps"
            android:layout_marginEnd="@dimen/cuarentadps"
            android:layout_marginStart="@dimen/cuarentadps"
            android:layout_marginTop="@dimen/treintadps"
            android:elevation="@dimen/diezdps"
            android:onClick="@{()->handler.login()}"
            android:text="@string/login"
            android:background="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/cerodps"
            android:layout_height="@dimen/cuarentadps"
            android:layout_marginEnd="@dimen/cuarentadps"
            android:layout_marginStart="@dimen/cuarentadps"
            android:layout_marginTop="@dimen/ochodps"
            android:onClick="@{()->handler.signup()}"
            android:text="@string/sign_up"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />


    </android.support.constraint.ConstraintLayout>
</layout>

